--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ pyqt6 = "^6.7.0"
 
 
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.4"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
